--- a/NET_first-API/appsettings.json
+++ b/NET_first-API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-4L91ILD\\SQLEXPRESS;Initial Catalog=FirstAPI_data;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=True"
+  }
 }
